--- a/.gitignore
+++ b/.gitignore
@@ -495,3 +495,5 @@ Cargo.lock
 
 # End of https://www.toptal.com/developers/gitignore/api/python,java,node,rust,go,intellij,jupyternotebooks
 .out
+
+.DS_Store
